--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ parso==0.8.4
 phonenumbers==8.13.53
 pillow==10.4.0
 platformdirs==4.3.7
+psycopg2-binary
 prometheus_client==0.21.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
