--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.3.2
 colorama==0.4.6
+dj-database-url
 comm==0.2.2
 comtypes==1.4.7
 cryptography==44.0.2
