--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ arrow==1.3.0
 asgiref==3.8.1
 asttokens==3.0.0
 async-lru==2.0.5
+dj-database-url==0.5.0
 attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
